syntax = "proto3";

package depot.cloud.v1;

import "google/protobuf/timestamp.proto";

service MachineService {
  rpc RegisterMachine(RegisterMachineRequest) returns (RegisterMachineResponse);
  rpc PingMachineHealth(PingMachineHealthRequest) returns (PingMachineHealthResponse);
}

message RegisterMachineRequest {
  string connection_id = 1;
  Cloud cloud = 2;
  string document = 3;
  string signature = 4;

  enum Cloud {
    CLOUD_UNSPECIFIED = 0;
    CLOUD_AWS = 1;
    CLOUD_FLY = 2;
  }
}

message RegisterMachineResponse {
  string machine_id = 1;
  Kind kind = 2;
  repeated Mount mounts = 3;
  Cert cert = 4;
  Cert ca_cert = 5;
  string token = 6;
  optional string github_token = 7;

  message Cert {
    string cert = 1;
    string key = 2;
  }

  enum Kind {
    KIND_UNSPECIFIED = 0;
    KIND_BUILDKIT = 1;
    KIND_GITHUB_ACTIONS = 2;
  }

  message Mount {
    string path = 1;
    string device = 2;
  }
}

message PingMachineHealthRequest {
  string machine_id = 1;
}

message PingMachineHealthResponse {
  bool should_terminate = 1;
}
